# rust_practice

./: .env.example  Cargo.toml
src/: main.rs
src/routes/: mod.rs  routes.rs  users_service.rs
